# OpenGL-Assignment

./: CMakeLists.txt  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  KG121.cpp  KG131.sln  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  README.md  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.hpp  VBO.hpp  json.hpp
dependencies/: CMakeLists.txt
dependencies/imgui-glfw-glad-glm/: CMakeLists.txt
dependencies/tinyobjloader/: CMakeLists.txt
